# lazy-log-formatter

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  changelog.md  pyproject.toml
.github/workflows/: python-publish.yml  release.yaml  update-release-changelog.yml
src/: cli.py  transformer.py
src/lazy_log/: __init__.py  __main__.py  cli.py  constants.py  transformer.py  utils.py
tests/: test_cli.py  test_transformer.py  test_utils.py
tests/data/: test.py
